# sc-sim

./: .gitignore  CLAUDE.md  README.md  blueprint.md  config.yaml  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  prompt-provider.md  sim-engine.md
src/flowform/: __init__.py  __main__.py  calendar.py  cli.py  config.py  profiler.py  schema_evolution.py  state.py
src/flowform/adm/: _calibration.py
src/flowform/catalog/: __init__.py  constraints.py  generator.py  pricing.py  weights.py
src/flowform/engines/: __init__.py  _order_utils.py  allocation.py  carrier_events.py  credit.py  demand_signals.py  pod.py  (+18 more)
tests/: __init__.py  test_adm_calibration.py  test_allocation.py  test_calendar.py  test_carrier_events.py  test_carrier_events_step27.py  test_carriers_warehouses.py  test_cli.py  test_config.py  test_constraints.py  test_continuous.py  test_credit_check.py  test_credit_limit_growth.py  test_customers.py  test_demand_forecasts.py  test_demand_plans.py  test_demand_signals.py  test_exchange_rates.py  test_fulfillment_validation.py  test_generator.py  test_integration.py  test_inventory_movements.py  test_inventory_position.py  test_inventory_targets.py  test_late_arriving.py  test_late_arriving_integration.py  test_load_lifecycle.py  test_load_planning.py  test_load_routing.py  test_master_data_changes.py  test_master_export.py  test_modifications.py  test_noise_injector.py  test_orders.py  test_output_writer.py  test_payments.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  (+15 more)
(+7 files in other folders)
